--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="AIM is a decentralised protocol for #metavser & #web3."
+      content="an.eth is a decentralised protocol for #defi,  #metaverse & #web3."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Aim Protocol</title>
+    <title>an.eth | A protocol for #DeFi. #Metaverse, #Web3 & #AI.</title>
   </head>
   <body>
     <noscript>Please enable javascript to load.</noscript>
